Made things compile

--- a/cite.bib
+++ b/cite.bib
@@ -323,24 +323,27 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
 @ARTICLE{2018arXiv180909148H,
    author = {{Hikage}, C. and {Oguri}, M. and {Hamana}, T. and {More}, S. and 
 	{Mandelbaum}, R. and {Takada}, M. and {K{\"o}hlinger}, F. and 
 	{Miyatake}, H. and {Nishizawa}, A.~J. and {Aihara}, H. and {Armstrong}, R. and 
-	{Bosch}, J. and {Coupon}, J. and {Ducout}, A. and {Hsieh}, B.-C. and 
-	{Komiyama}, Y. and {Lanusse}, F. and {Leauthaud}, A. and {Medezinski}, E. and 
-	{Mineo}, S. and {Miyazaki}, S. and {Murata}, R. and {Murayama}, H. and 
-	{Shirasaki}, M. and {Sif{\'o}n}, C. and {Simet}, M. and {Speagle}, J. and 
-	{Spergel}, D.~N. and {Strauss}, M.~A. and {Sugiyama}, N. and 
-	{Tanaka}, M. and {Wang}, S.-Y.},
+	{Bosch}, J. and {Coupon}, J. and {Ducout}, A. and {Ho}, P. and 
+	{Hsieh}, B.-C. and {Komiyama}, Y. and {Lanusse}, F. and {Leauthaud}, A. and 
+	{Lupton}, R.~H. and {Medezinski}, E. and {Mineo}, S. and {Miyama}, S. and 
+	{Miyazaki}, S. and {Murata}, R. and {Murayama}, H. and {Shirasaki}, M. and 
+	{Sif{\'o}n}, C. and {Simet}, M. and {Speagle}, J. and {Spergel}, D.~N. and 
+	{Strauss}, M.~A. and {Sugiyama}, N. and {Tanaka}, M. and {Utsumi}, Y. and 
+	{Wang}, S.-Y. and {Yamada}, Y.},
     title = "{Cosmology from cosmic shear power spectra with Subaru Hyper Suprime-Cam first-year data}",
-  journal = {arXiv e-prints},
+  journal = {\pasj},
 archivePrefix = "arXiv",
    eprint = {1809.09148},
- keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
-     year = 2018,
-    month = sep,
-   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180909148H},
+ keywords = {dark matter, gravitational lensing: weak, large-scale structure of universe},
+     year = 2019,
+    month = mar,
+      doi = {10.1093/pasj/psz010},
+   adsurl = {http://adsabs.harvard.edu/abs/2019PASJ..tmp...22H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -359,3 +362,374 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2002ApJ...568...20C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@ARTICLE{1929CoMtW...3...23H,
+   author = {{Hubble}, E.},
+    title = "{A Relation between Distance and Radial Velocity among Extra-Galactic Nebulae}",
+  journal = {Contributions from the Mount Wilson Observatory, vol.~3, pp.23-28},
+ keywords = {Galaxies:  Hubble's Law},
+     year = 1929,
+   volume = 3,
+    pages = {23-28},
+   adsurl = {http://adsabs.harvard.edu/abs/1929CoMtW...3...23H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{2015eaci.book.....S,
+   author = {{Schneider}, P.},
+    title = "{Extragalactic Astronomy and Cosmology: An Introduction}",
+ keywords = {Physics},
+booktitle = {Extragalactic Astronomy and Cosmology: An Introduction, ISBN 978-3-642-54082-0.~Springer-Verlag Berlin Heidelberg, 2015},
+     year = 2015,
+      doi = {10.1007/978-3-642-54083-7},
+   adsurl = {http://adsabs.harvard.edu/abs/2015eaci.book.....S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{lectgravlens,
+author = {{Schn{}eider}, P.},
+title = "{Gravitational lensing -- Leture Notes}",
+year = 2012,
+}
+
+@ARTICLE{2012ApJ...761..152T,
+   author = {{Takahashi}, R. and {Sato}, M. and {Nishimichi}, T. and {Taruya}, A. and 
+	{Oguri}, M.},
+    title = "{Revising the Halofit Model for the Nonlinear Matter Power Spectrum}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1208.2701},
+ keywords = {cosmology: theory, large-scale structure of universe, methods: numerical},
+     year = 2012,
+    month = dec,
+   volume = 761,
+      eid = {152},
+    pages = {152},
+      doi = {10.1088/0004-637X/761/2/152},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...761..152T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014ApJ...780..111H,
+   author = {{Heitmann}, K. and {Lawrence}, E. and {Kwan}, J. and {Habib}, S. and 
+	{Higdon}, D.},
+    title = "{The Coyote Universe Extended: Precision Emulation of the Matter Power Spectrum}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1304.7849},
+ keywords = {large-scale structure of universe, methods: statistical},
+     year = 2014,
+    month = jan,
+   volume = 780,
+      eid = {111},
+    pages = {111},
+      doi = {10.1088/0004-637X/780/1/111},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...780..111H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1996MNRAS.282..263E,
+   author = {{Eke}, V.~R. and {Cole}, S. and {Frenk}, C.~S.},
+    title = "{Cluster evolution as a diagnostic for Omega}",
+  journal = {\mnras},
+   eprint = {astro-ph/9601088},
+     year = 1996,
+    month = sep,
+   volume = 282,
+      doi = {10.1093/mnras/282.1.263},
+   adsurl = {http://adsabs.harvard.edu/abs/1996MNRAS.282..263E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1920RSPTA.220..291D,
+   author = {{Dyson}, F.~W. and {Eddington}, A.~S. and {Davidson}, C.},
+    title = "{A Determination of the Deflection of Light by the Sun's Gravitational Field, from Observations Made at the Total Eclipse of May 29, 1919}",
+  journal = {Philosophical Transactions of the Royal Society of London Series A},
+     year = 1920,
+   volume = 220,
+    pages = {291-333},
+      doi = {10.1098/rsta.1920.0009},
+   adsurl = {http://adsabs.harvard.edu/abs/1920RSPTA.220..291D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1995A&A...299....1S,
+   author = {{Schramm}, T. and {Kayser}, R.},
+    title = "{The complex theory of gravitational lensing. Beltrami equation and cluster lensing.}",
+  journal = {\aap},
+   eprint = {astro-ph/9408064},
+ keywords = {METHODS: ANALYTICAL, METHODS: NUMERICAL, GALAXIES: CLUSTERS OF, GRAVITATIONAL LENSING},
+     year = 1995,
+    month = jul,
+   volume = 299,
+    pages = {1},
+   adsurl = {http://adsabs.harvard.edu/abs/1995A%26A...299....1S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{1997A&A...318..687S,
+   author = {{Seitz}, C. and {Schneider}, P.},
+    title = "{Steps towards nonlinear cluster inversion through gravitational distortions. III. Including a redshift distribution of the sources.}",
+  journal = {\aap},
+   eprint = {astro-ph/9601079},
+ keywords = {GRAVITATIONAL LENSING, DARK MATTER, COSMOLOGY: OBSERVATIONS, GALAXIES: CLUSTERS OF},
+     year = 1997,
+    month = feb,
+   volume = 318,
+    pages = {687-699},
+   adsurl = {http://adsabs.harvard.edu/abs/1997A%26A...318..687S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1992ApJ...388..272K,
+   author = {{Kaiser}, N.},
+    title = "{Weak gravitational lensing of distant galaxies}",
+  journal = {\apj},
+ keywords = {Galactic Clusters, Galactic Structure, Gravitational Lenses, Mass Distribution, Power Spectra, Quasars, Spatial Distribution, Universe},
+     year = 1992,
+    month = apr,
+   volume = 388,
+    pages = {272-286},
+      doi = {10.1086/171151},
+   adsurl = {http://adsabs.harvard.edu/abs/1992ApJ...388..272K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2001A&A...374..740S,
+   author = {{Seitz}, S. and {Schneider}, P.},
+    title = "{A new finite-field mass reconstruction algorithm}",
+  journal = {\aap},
+ keywords = {COSMOLOGY: THEORY, METHODS: NUMERICAL},
+     year = 2001,
+    month = aug,
+   volume = 374,
+    pages = {740-745},
+      doi = {10.1051/0004-6361:20010493},
+   adsurl = {http://adsabs.harvard.edu/abs/2001A%26A...374..740S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2007A&A...462..841S,
+   author = {{Schneider}, P. and {Kilbinger}, M.},
+    title = "{The ring statistics - how to separate E- and B-modes of cosmic shear correlation functions on a finite interval}",
+  journal = {\aap},
+   eprint = {astro-ph/0605084},
+ keywords = {methods: statistical, gravitational lensing, cosmology: large-scale, structure of the Universe, cosmology: dark matter},
+     year = 2007,
+    month = feb,
+   volume = 462,
+    pages = {841-849},
+      doi = {10.1051/0004-6361:20065532},
+   adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...462..841S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2019MNRAS.484L..59A,
+   author = {{Asgari}, M. and {Heymans}, C.},
+    title = "{Dark Energy Survey Year 1: An independent E/B-mode cosmic shear analysis}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1811.10596},
+ keywords = {Gravitational lensing: weak},
+     year = 2019,
+    month = mar,
+   volume = 484,
+    pages = {L59-L63},
+      doi = {10.1093/mnrasl/slz006},
+   adsurl = {http://adsabs.harvard.edu/abs/2019MNRAS.484L..59A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2018arXiv181002353A,
+   author = {{Asgari}, M. and {Heymans}, C. and {Hildebrandt}, H. and {Miller}, L. and 
+	{Schneider}, P. and {Amon}, A. and {Choi}, A. and {Erben}, T. and 
+	{Georgiou}, C. and {Harnois-Deraps}, J. and {Kuijken}, K.},
+    title = "{Consistent cosmic shear in the face of systematics: a B-mode analysis of KiDS-450, DES-SV and CFHTLenS}",
+  journal = {arXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1810.02353},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2018,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv181002353A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017MNRAS.471.4412K,
+   author = {{K{\"o}hlinger}, F. and {Viola}, M. and {Joachimi}, B. and {Hoekstra}, H. and 
+	{van Uitert}, E. and {Hildebrandt}, H. and {Choi}, A. and {Erben}, T. and 
+	{Heymans}, C. and {Joudaki}, S. and {Klaes}, D. and {Kuijken}, K. and 
+	{Merten}, J. and {Miller}, L. and {Schneider}, P. and {Valentijn}, E.~A.
+	},
+    title = "{KiDS-450: the tomographic weak lensing power spectrum and constraints on cosmological parameters}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1706.02892},
+ keywords = {gravitational lensing: weak, cosmological parameters, cosmology: observations, large-scale structure of Universe},
+     year = 2017,
+    month = nov,
+   volume = 471,
+    pages = {4412-4435},
+      doi = {10.1093/mnras/stx1820},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.471.4412K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{2001fuco.book.....R,
+   author = {{Rich}, J.},
+    title = "{Fundamentals of Cosmology}",
+ keywords = {Cosmology, Gravitation, General Relativity, Particle Physics, Gravitation and General Relativity},
+booktitle = {Fundamentals of cosmology / James Rich, Physics and astronomy online library.~Berlin: Springer.~ISBN 3-540-41350-2, 2001, XI + 302 pp.~With 68 problems and 23 selected solutions.~Solutions manual for instructors on request directly from Springer-Verlag},
+     year = 2001,
+   adsurl = {http://adsabs.harvard.edu/abs/2001fuco.book.....R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2018arXiv181206077W,
+   author = {{Wright}, A.~H. and {Hildebrandt}, H. and {Kuijken}, K. and 
+	{Erben}, T. and {Blake}, R. and {Buddelmeijer}, H. and {Choi}, A. and 
+	{Cross}, N. and {de Jong}, J.~T.~A. and {Edge}, A. and {Gonzalez-Fernandez}, C. and 
+	{Gonz{\'a}lez Solares}, E. and {Grado}, A. and {Heymans}, C. and 
+	{Irwin}, M. and {Kupcu Yoldas}, A. and {Lewis}, J.~R. and {Mann}, R.~G. and 
+	{Napolitano}, N. and {Radovich}, M. and {Schneider}, P. and 
+	{Sif{\'o}n}, C. and {Sutherland}, W. and {Sutorius}, E. and 
+	{Verdoes Kleijn}, G.~A.},
+    title = "{KiDS+VIKING-450: A new combined optical {\&} near-IR dataset for cosmology and astrophysics}",
+  journal = {arXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1812.06077},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+     year = 2018,
+    month = dec,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv181206077W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2018MNRAS.481.1337H,
+   author = {{Harnois-D{\'e}raps}, J. and {Amon}, A. and {Choi}, A. and {Demchenko}, V. and 
+	{Heymans}, C. and {Kannawadi}, A. and {Nakajima}, R. and {Sirks}, E. and 
+	{van Waerbeke}, L. and {Cai}, Y.-C. and {Giblin}, B. and {Hildebrandt}, H. and 
+	{Hoekstra}, H. and {Miller}, L. and {Tr{\"o}ster}, T.},
+    title = "{Cosmological simulations for combined-probe analyses: covariance and neighbour-exclusion bias}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1805.04511},
+ keywords = {gravitational lensing: weak, methods: numerical, dark matter, large-scale structure of Universe},
+     year = 2018,
+    month = nov,
+   volume = 481,
+    pages = {1337-1367},
+      doi = {10.1093/mnras/sty2319},
+   adsurl = {http://adsabs.harvard.edu/abs/2018MNRAS.481.1337H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvL.112e1303B,
+   author = {{Battye}, R.~A. and {Moss}, A.},
+    title = "{Evidence for Massive Neutrinos from Cosmic Microwave Background and Lensing Observations}",
+  journal = {Physical Review Letters},
+archivePrefix = "arXiv",
+   eprint = {1308.5870},
+ keywords = {Observational cosmology, Neutrino mass and mixing, Gravitational lenses and luminous arcs, Background radiations},
+     year = 2014,
+    month = feb,
+   volume = 112,
+   number = 5,
+      eid = {051303},
+    pages = {051303},
+      doi = {10.1103/PhysRevLett.112.051303},
+   adsurl = {http://adsabs.harvard.edu/abs/2014PhRvL.112e1303B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016A&A...594A..14P,
+   author = {{Planck Collaboration} and {Ade}, P.~A.~R. and {Aghanim}, N. and 
+	{Arnaud}, M. and {Ashdown}, M. and {Aumont}, J. and {Baccigalupi}, C. and 
+	{Banday}, A.~J. and {Barreiro}, R.~B. and {Bartolo}, N. and et al.},
+    title = "{Planck 2015 results. XIV. Dark energy and modified gravity}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1502.01590},
+ keywords = {dark energy, cosmic background radiation, cosmology: theory, gravitation},
+     year = 2016,
+    month = sep,
+   volume = 594,
+      eid = {A14},
+    pages = {A14},
+      doi = {10.1051/0004-6361/201525814},
+   adsurl = {http://adsabs.harvard.edu/abs/2016A%26A...594A..14P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2019arXiv190109488S,
+   author = {{Shirasaki}, M. and {Hamana}, T. and {Takada}, M. and {Takahashi}, R. and 
+	{Miyatake}, H.},
+    title = "{Mock galaxy shape catalogs in the Subaru Hyper Suprime-Cam Survey}",
+  journal = {arXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1901.09488},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2019,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2019arXiv190109488S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2019arXiv190207439B,
+   author = {{Blake}, C.},
+    title = "{Power spectrum modelling of galaxy and radio intensity maps including observational effects}",
+  journal = {arXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1902.07439},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2019,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2019arXiv190207439B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2016ApJ...818..132A,
+   author = {{Addison}, G.~E. and {Huang}, Y. and {Watts}, D.~J. and {Bennett}, C.~L. and 
+	{Halpern}, M. and {Hinshaw}, G. and {Weiland}, J.~L.},
+    title = "{Quantifying Discordance in the 2015 Planck CMB Spectrum}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1511.00055},
+ keywords = {cosmic background radiation, cosmological parameters, cosmology: observations},
+     year = 2016,
+    month = feb,
+   volume = 818,
+      eid = {132},
+    pages = {132},
+      doi = {10.3847/0004-637X/818/2/132},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...818..132A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013PDU.....2..166V,
+   author = {{Verde}, L. and {Protopapas}, P. and {Jimenez}, R.},
+    title = "{Planck and the local Universe: Quantifying the tension}",
+  journal = {Physics of the Dark Universe},
+archivePrefix = "arXiv",
+   eprint = {1306.6766},
+ primaryClass = "astro-ph.CO",
+     year = 2013,
+    month = sep,
+   volume = 2,
+    pages = {166-175},
+      doi = {10.1016/j.dark.2013.09.002},
+   adsurl = {http://adsabs.harvard.edu/abs/2013PDU.....2..166V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
+
