--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -49,6 +49,7 @@
 % with options according to your LaTeX or PDFLaTeX drivers.
 %
 \usepackage{todonotes}
+%\renewcommand{\todo}{\emph}
 \begin{document} 
 
 
