--- a/appendix.tex
+++ b/appendix.tex
@@ -1,139 +1,190 @@
 \section{Detailed Calculations}
-\subsection{Calculation of the Power Spectrum}
-In this Section we will perform the calculation for the observed power spectrum \todo{I need to add cdots for scalar products in this section...} $P^{\text{obs}}(\b \ell)$. For this, we assume an infinitely large field in order to perform our integration over $\mathbb{R}^2$. In reality, finite field effects would play a role here. We begin with the calculation of the correlation for the Fourier transformed shear:
+\subsection{Calculation of the power spectrum}
+In this Section we will perform the calculation for the observed power spectrum $P^{\text{obs}}(\b \ell)$. For this, we assume an infinitely large field in order to perform our integration over $\mathbb{R}^2$. In reality, finite field effects would play a role here. We begin with the calculation of the correlation for the Fourier transformed shear:
 \begin{align}
-\la \gammaoh(\b \ell) \gammaoh {}^*(\b \ell')\ra = & \la\int\text{d}^2\b \theta\int\text{d}^2\b \theta'\,W(\b \theta)W(\b \theta')\gamma(\b \theta)\gamma^*(\b \theta')\exp(i\b \ell\b \theta-i\b \ell'\b \theta')\ra\nonumber\\
- = & \la\int\text{d}^2\b \theta\int\text{d}^2\b \theta'\,W(\b \theta)W(\b \theta')\exp(i\b \ell\b \theta-i\b \ell'\b \theta') \int \frac{\text{d}^2\b k}{(2\pi)^2}\int \frac{\text{d}^2\b k'}{(2\pi)^2}\, \hat{\gamma}(\b k)\hat{\gamma}^*(\b k')\exp(-i\b k\b \theta+i\b k'\b \theta')\ra \nonumber\\
-= & \la \int \text{d}^2\b \theta \int \text{d}^2\b \theta' \int \frac{\text{d}^2\b k}{(2\pi)^2} \int \frac{\text{d}^2\b k'}{(2\pi)^2}\, P(\b k)(2\pi)^2 \delta(\b k-\b k') \exp[i(\b \ell\b \theta-\b \ell'\b \theta'-\b k\b \theta+\b k'\b \theta')]W(\b \theta)W(\b \theta')\ra \nonumber\\
-  = & \la \int \frac{\text{d}^2\b k}{(2\pi)^2} \, P(\b k) \int \text{d}^2\b \theta\, W(\b \theta)\exp[i\b \theta(\b \ell-\b k)]\int \text{d}^2\b \theta'\, W(\b \theta') \exp[-i\b \theta(\b \ell'-\b k)] \ra \nonumber\\
-  = & \la \int\frac{\text{d}^2 \b k}{(2\pi)^2} \, P(\b k)\widehat{W}(\b \ell-\b k)\widehat{W}^* (\b \ell'-\b k)\ra
+& \la \gammaoh(\b \ell) \gammaoh {}^*(\b \ell')\ra\nonumber\\
+ &\qquad = \la\int\text{d}^2 \theta\int\text{d}^2 \theta'\,W(\b \theta)W(\b \theta')\gamma(\b \theta)\gamma^*(\b \theta')\exp(\i \b \ell\b \theta-\i \b \ell'\b \theta')\ra\nonumber\\
+ &\qquad = \la\int\text{d}^2 \theta\int\text{d}^2 \theta'\,W(\b \theta)W(\b \theta')\exp(\i \b \ell\b \theta-\i \b \ell'\b \theta') \int \frac{\text{d}^2 k}{(2\pi)^2}\int \frac{\text{d}^2 \ell}{(2\pi)^2}\, \tilde{\gamma}(\b k)\tilde{\gamma}^*(\b \ell)\exp(-\i \b k\b \theta+\i \b \ell\b \theta')\ra \nonumber\\
+&\qquad = \la \int \text{d}^2 \theta \int \text{d}^2 \theta' \int \frac{\text{d}^2 k}{(2\pi)^2} \int \frac{\text{d}^2 \ell}{(2\pi)^2}\, P(\b k)(2\pi)^2 \delta(\b k-\b \ell) \exp[\i (\b \ell\b \theta-\b \ell'\b \theta'-\b k\b \theta+\b \ell\b \theta')]W(\b \theta)W(\b \theta')\ra \nonumber\\
+  &\qquad = \la \int \frac{\text{d}^2 k}{(2\pi)^2} \, P(\b k) \int \text{d}^2 \theta\, W(\b \theta)\exp[\i\b \theta(\b \ell-\b k)]\int \text{d}^2 \theta'\, W(\b \theta') \exp[-\i\b \theta(\b \ell'-\b k)] \ra \nonumber\\
+  &\qquad = \la \int\frac{\text{d}^2 k}{(2\pi)^2} \, P(\b k)\widetilde{W}(\b \ell-\b k)\widetilde{W}^* (\b \ell'-\b k)\ra
 \end{align}
 It is important to keep in mind that the ensemble averages of the weight function are independent of the ensemble averages of the shear values, meaning $\la W(\b \theta)\gamma(\b \theta)\ra = \la W(\b \theta)\ra \la \gamma(\b \theta)\ra$. We can define $W(\b \theta)=1+w(\b\theta)$ with $\la w(\b \theta)\ra = 0$, which leads to the expession
 \begin{align}
-\la \gammaoh(\b \ell) \gammaoh {}^*(\b \ell')\ra = & \la \int\frac{\text{d}^2 \b k}{(2\pi)^2} \, P(\b k) \left[ (2\pi)^4\delta(\b \ell-\b k)\delta(\b \ell'-\b k)+(2\pi)^2\big( \hat{w}(\b \ell-\b k)\delta(\b \ell'-\b k) + \hat{w}^*(\b \ell'-\b k)\delta(\b \ell-\b k)\big)\right.\right. \nonumber\\
- & \qquad \left.\left. + \hat{w}(\b \ell-\b k)\hat{w}(\b \ell'-\b k) \right] \right. \bigg> \nonumber\\
- = & (2\pi)^2\delta(\b \ell-\b \ell')P(\b \ell) + \big[ \la \hat{w}(\b \ell-\b \ell')\ra P(\b \ell')+\la \hat{w}^*(\b \ell'-\b \ell)\ra P(\b \ell)\big] + \la \int \frac{\text{d}^2 \b k}{(2\pi)^2} \, \hat{w}(\b \ell-\b k)\hat{w}^*(\b \ell'-\b k)P(\b k)\ra \nonumber\\
-\overset{(*)}{=} & (2\pi)^2\delta(\b \ell-\b \ell')P(\b \ell) + \la \int \frac{\text{d}^2 \b k}{(2\pi)^2}\, \hat{w}(\b \ell-\b k)\hat{w}^*(\b \ell'-\b k)P(\b k)\ra \, ,
+& \la \gammaoh(\b \ell) \gammaoh {}^*(\b \ell')\ra \nonumber\\
+ &\qquad = \la \int\frac{\text{d}^2 k}{(2\pi)^2} \, P(\b k) \left[ (2\pi)^4\delta(\b \ell-\b k)\delta(\b \ell'-\b k)+(2\pi)^2\big[ \tilde{w}(\b \ell-\b k)\delta(\b \ell'-\b k) + \tilde{w}^*(\b \ell'-\b k)\delta(\b \ell-\b k)\big]\right.\right. \nonumber\\
+ & \quad\qquad \left.\left. + \tilde{w}(\b \ell-\b k)\tilde{w}(\b \ell'-\b k) \right] \right. \bigg> \nonumber\\
+ &\qquad =  (2\pi)^2\delta(\b \ell-\b \ell')P(\b \ell) + \left[ \la \tilde{w}(\b \ell-\b \ell')\ra P(\b \ell')+\la \tilde{w}^*(\b \ell'-\b \ell)\ra P(\b \ell)\right] + \la \int \frac{\text{d}^2 k}{(2\pi)^2} \, \tilde{w}(\b \ell-\b k)\tilde{w}^*(\b \ell'-\b k)P(\b k)\ra \nonumber\\
+& \qquad \overset{(*)}{=}  (2\pi)^2\delta(\b \ell-\b \ell')P(\b \ell) + \la \int \frac{\text{d}^2 k}{(2\pi)^2}\, \tilde{w}(\b \ell-\b k)\tilde{w}^*(\b \ell'-\b k)P(\b k)\ra \, ,
 \label{eq:pobs1}
 \end{align}
-where in $(*)$ we have used that the average $\la \hat{w}(\b \ell)\ra$ vanishes.
-Up until now, we have not specified our weight-function $w$. So we now parametrize it as \begin{equation}
+where in $(*)$ we have used that the average $\la \tilde{w}(\b \ell)\ra$ vanishes.
+Up until now, we have not specified our weight-function $w$. We parametrize it as \begin{equation}
 w(\b \theta) = \sum_{\b \alpha \in \mathbb{Z}^2} w_{\b \alpha} \Xi(\b \theta-L\b \alpha)\text{ , with the Box-Function } \Xi(\b \theta) = \begin{cases}
 1 \qquad \b \theta\in \left[-\frac{L}{2},\frac{L}{2}\right]^2 \\
 0 \qquad \text{else}
 \end{cases}.
 \end{equation}
 Here, the $w_{\b \alpha}$ are random variables, drawn from the random distribution describing the survey depths. For the Fourier-Transform we compute: \begin{equation}
-\hat{w}(\b \ell) = \sum_{\b \alpha \in \mathbb{Z}^2} w_{\b \alpha} \exp(-i \b \ell L\b \alpha) \widehat{\Xi}(\b \ell)\, ,
+\tilde{w}(\b \ell) = \sum_{\b \alpha \in \mathbb{Z}^2} w_{\b \alpha} \exp(-\i \b \ell L\b \alpha) \widetilde{\Xi}(\b \ell)\, ,
 \end{equation}
 where
 \begin{equation}
-\widehat{\Xi}(\b\ell) = \frac{4\sin\left(\frac{L\ell_1}{2}\right)\sin\left(\frac{L\ell_2}{2}\right)}{\ell_1\ell_2}\, ,
+\widetilde{\Xi}(\b\ell) = \frac{4\sin\left(\frac{L\ell_1}{2}\right)\sin\left(\frac{L\ell_2}{2}\right)}{\ell_1\ell_2}\, ,
 \end{equation}
 is a 2-dimensional sinc function.
 Assuming an uncorrelated weight-distribution $\left(\la w_{\b \alpha} w_{\b \beta}\ra = 0\text{ for }\b \alpha\neq\b \beta\right)$ and setting $\la w^2\ra \equiv \la w_{\b \alpha}^2\ra$ for each $\b \alpha$, we get
 \begin{align}
-\la \int \frac{\text{d}^2 \b k}{(2\pi)^2}\, \hat{w}(\b \ell-\b k)\hat{w}^*(\b \ell'-\b k)P(\b k)\ra = & \la \int \frac{\text{d}^2 \b k}{(2\pi)^2} \sum_{\b \alpha,\b \beta}w_{\b \alpha}w_{\b \beta} \exp[-i(\b \ell - \b k)L\b \alpha]\, \widehat{\Xi}(\b \ell - \b k) \exp[i(\b \ell' - \b k)L\b \beta]\, \widehat{\Xi}^*(\b \ell' - \b k)P(\b k)\ra \nonumber\\
- = & \int \frac{\text{d}^2 \b k}{(2\pi)^2} \sum_{\b \alpha} \la w^2\ra \exp[-i(\b \ell - \b k)L\b \alpha + i(\b \ell' - \b k) L\b \alpha]\, \widehat{\Xi}(\b \ell - \b k)\widehat{\Xi}^*(\b \ell' - \b k)P(\b k) \, .
+&\la \int \frac{\text{d}^2 k}{(2\pi)^2}\, \tilde{w}(\b \ell-\b k)\tilde{w}^*(\b \ell'-\b k)P(\b k)\ra \nonumber\\
+&\qquad = \la \int \frac{\text{d}^2 k}{(2\pi)^2} \sum_{\b \alpha,\b \beta}w_{\b \alpha}w_{\b \beta} \exp[-\i(\b \ell - \b k)L\b \alpha]\, \widetilde{\Xi}(\b \ell - \b k) \exp[\i(\b \ell' - \b k)L\b \beta]\, \widetilde{\Xi}^*(\b \ell' - \b k)P(\b k)\ra \nonumber\\
+&\qquad = \int \frac{\text{d}^2 k}{(2\pi)^2} \sum_{\b \alpha} \la w^2\ra \exp[-\i(\b \ell - \b k)L\b \alpha + i(\b \ell' - \b k) L\b \alpha]\, \widetilde{\Xi}(\b \ell - \b k)\widetilde{\Xi}^*(\b \ell' - \b k)P(\b k) \, .
 \end{align}
 Using this result, we can obtain the observed power spectrum \begin{equation}
 P^{\rm{obs}}(\b\ell) = \frac{1}{(2\pi)^2}\int\d^2\ell' \la \gammaoh(\b \ell) \gammaoh {}^*(\b \ell')\ra\, ,
 \end{equation}
 by performing the $\b \ell'$-integration in \eqref{eq:pobs1}:
 \begin{align}
-P^{\text{obs}}(\b \ell) = & P(\b \ell)+\int \frac{\text{d}^2\b \ell'}{(2\pi)^2} \int\frac{\text{d}^2\b k}{(2\pi)^2}\sum_{\b \alpha}\la w^2\ra \exp[-i(\b \ell-\b k)L\b \alpha+i(\b \ell'-\b k)L\b \alpha]\, \widehat{\Xi}(\b \ell-\b k)\widehat{\Xi}(\b \ell' - \b k) P(\b k) \nonumber\\
-= & P(\b \ell)+ \int\frac{\text{d}^2\b k}{(2\pi)^2}\sum_{\b \alpha}\la w^2\ra \exp[-i(\b \ell-\b k)L\b \alpha]\, \widehat{\Xi}(\b \ell - \b k)P(k) \int\frac{\text{d}^2\b \ell}{(2\pi)^2}\, \widehat{\Xi}^*(\b \ell'-\b k)\exp[i(\b \ell'- \b k)L\b \alpha] \nonumber\\
- = & P(\b \ell) + \la w^2\ra \int\frac{\text{d}^2\b k}{(2\pi)^2}\, \widehat{\Xi}(\b \ell-\b k)P(\b k) \sum_{\b \alpha}\exp[-i(\b \ell - \b k)L\b \alpha]\,\Xi(L\b \alpha) \nonumber\\
- = & P(\b \ell) + \la w^2\ra \int\frac{\text{d}^2\b k}{(2\pi)^2}\,\widehat{\Xi}(\b \ell-\b k)P(\b k)\, ,
+P^{\text{obs}}(\b \ell) = & P(\b \ell)+\int \frac{\text{d}^2\b \ell'}{(2\pi)^2} \int\frac{\text{d}^2\b k}{(2\pi)^2}\sum_{\b \alpha}\la w^2\ra \exp[-\i(\b \ell-\b k)L\b \alpha+\i(\b \ell'-\b k)L\b \alpha]\, \widetilde{\Xi}(\b \ell-\b k)\widetilde{\Xi}(\b \ell' - \b k) P(\b k) \nonumber\\
+= & P(\b \ell)+ \int\frac{\text{d}^2\b k}{(2\pi)^2}\sum_{\b \alpha}\la w^2\ra \exp[-\i(\b \ell-\b k)L\b \alpha]\, \widetilde{\Xi}(\b \ell - \b k)P(k) \int\frac{\text{d}^2\b \ell}{(2\pi)^2}\, \widetilde{\Xi}^*(\b \ell'-\b k)\exp[\i(\b \ell'- \b k)L\b \alpha] \nonumber\\
+ = & P(\b \ell) + \la w^2\ra \int\frac{\text{d}^2\b k}{(2\pi)^2}\, \widetilde{\Xi}(\b \ell-\b k)P(\b k) \sum_{\b \alpha}\exp[-\i(\b \ell - \b k)L\b \alpha]\,\Xi(L\b \alpha) \nonumber\\
+ = & P(\b \ell) + \la w^2\ra \int\frac{\text{d}^2\b k}{(2\pi)^2}\,\widetilde{\Xi}(\b \ell-\b k)P(\b k)\, ,
 \end{align}
-which is a 2-dimensional convolution of the power spectrum and the 2-dimensional sinc function.
+which is a convolution of the power spectrum and the 2-dimensional sinc function.
 \label{sec:calc of PS}
-\subsection{Details on the function $E(\theta)$}
-\label{sec:details on etheta}
-The function $E(\theta)$ is of central importance in this model, so we want to explain how to obtain it. It describes, given a pair of galaxies with distance $\theta$, the probability that they are in the same pointing. We obtain the function in the following way:
 
-Given one square field of length 1 and a separation vector $\b\theta$, without loss of generality we can assume $\theta_1,\theta_2\geq 0$. As depicted in Figure \ref{fig:explain_etheta}, the dashed square represents all possible positions that the first galaxy can take, such that the second galaxy is still within the same pointing. The volume of this square equals \begin{equation}
-\tilde{V}(|\b\theta|,\phi)  = \big[1-|\b\theta|\cos(\phi)\big]\,\big[1-|\b\theta|\sin(\phi)\big]\, ,
-\end{equation} where $\phi$ represents the angle of the vector $\b\theta$. To exclude negative Volumes (which would occur when $|\b\theta|>1$ holds), we nead to add the Heaviside theta function $H$:
-\begin{equation}
-V(|\b\theta|,\phi)  = \big[1-|\b\theta|\cos(\phi)\big]\,\big[1-|\b\theta|\sin(\phi)\big] H\big[1-|\b\theta|\cos(\phi)\big]\,H\big[1-|\b\theta|\sin(\phi)\big]\, .
-\label{eq:eoftheta1}
-\end{equation} 
-To obtain the function $E(\theta)$, we need to average Equation \eqref{eq:eoftheta1} over all angles $\phi$. While the case $\theta_1,\theta_2\geq 0$ certainly does not hold for all angles $\phi$, we can eliminate the other cases by simple symmetry.
-\begin{align}
-E(\theta) = & \frac{4}{2\pi}\int_0^{\frac{\pi}{2}}\d\phi\, V(|\b\theta|,\phi) = \frac{2}{\pi}\begin{cases}
-\int_0^{\frac{\pi}{2}} \d\phi\, \big[1-|\b\theta|\cos(\phi)\big]\,\big[1-|\b\theta|\sin(\phi)\big]\, , & |\b\theta|\leq 1 \\
-\int_{\arccos(|\b\theta|^{-1})}^{\arcsin(|\b\theta|^{-1})} \d\phi\, \big[1-|\b\theta|\cos(\phi)\big]\,\big[1-|\b\theta|\sin(\phi)\big]\, , \quad & 1\leq |\b\theta| \leq \sqrt{2} \\
-0\, , & \sqrt{2}\leq\theta
-\end{cases} \nonumber\\
- = & \begin{cases}
-\frac{\pi + (\theta-4)*\theta}{\pi}\, , & \theta \leq 1 \\
-\frac{2[-1+2\sqrt{1-\theta^{-2}}*2\theta - \theta^2/2 - \arccos(\theta^{-1}) + \arcsin(\theta^{-1})]}{\pi}\, , & 1\leq \theta \leq \sqrt{2} \\
-0\, , & \sqrt{2}\leq \theta
-\end{cases}\, .
-\end{align}
-\begin{figure}
-    \centering
-    \def\svgwidth{200pt}    
-    \input{images/eoftheta_new.pdf_tex}  
-    \caption{Graphic representation on how to obtain the function $E(\theta)$. For a separation vector $\b\theta$, the dashed square represents the area of galaxies that have their partner in the same pointing.}
-    \label{fig:explain_etheta}
-\end{figure}
 \subsection{Calculation of the shear correlation functions}
 \label{sec:calc of xipm}
-Following \citet{2017MNRAS.465.1454H}, given a set of galaxies we calculate the shear correlation function via \begin{equation}
-\xi_+(\theta) = \frac{\sum_{a,b}w_aw_b\epsilon_a\epsilon_b^*\Delta(\b\theta_a-\b\theta_b)}{\sum_{a,b}w_aw_b\Delta(\b\theta_a-\b\theta_b)}\, .
+Following \citet{2017MNRAS.465.1454H}, given a set of galaxies we calculate the shear correlation functions via \begin{equation}
+\xi^{ij}_+(\theta) = \frac{\sum_{a,b}w_a^iw_b^j\epsilon_a^i\epsilon_b^{j*}\Delta(|\b\theta_a^i-\b\theta_b^i|)}{\sum_{a,b}w_a^iw_b^j\Delta(|\b\theta_a^i-\b\theta_b^i|)}\, .
 \label{eq:xip_from_observations}
 \end{equation}
 Here, $w$ represents the lensing weight of the galaxy, whereas $\epsilon$ is its (complex) ellipticity and $\b \theta$ its position on the sky. We have defined the function $\Delta$ as \[
-\Delta(\b\theta_a-\b\theta_b) = \begin{cases}
-1, \,\, & |\b\theta_a-\b\theta_b| \in [\theta,\theta+{\rm d}\theta] \\
+\Delta(|\b\theta_a^i-\b\theta_b^i|) = \begin{cases}
+1, \,\, & |\b\theta_a^i-\b\theta_b^j| \in [\theta,\theta+{\rm d}\theta] \\
 0, & \text{ else}
 \end{cases}\, ,
 \]
-where we assume ${\rm d}\theta \ll \theta$. When we now separate our galaxy samples into the ten percentiles $I$ defined above, and denote the galaxies from sample $a$ that are in pointing $i$ with $a_i$, the numerator in Equation \eqref{eq:xip_from_observations} transforms to:
-\begin{align*}
- & \sum_{i,j=1}^{10} \sum_{a_i,b_j} w_{a_i}w_{b_j}\epsilon_{a_i}\epsilon_{b_j}^*\Delta(\b\theta_{a_i}-\b\theta_{b_j}) \\
- = & \sum_{i=1}^{10}\sum_{a_i}w_{a_i} \sum_{j=1}^{10} \sum_{b_j} w_{b_j}\epsilon_{a_i}\epsilon_{b_j}\Delta(\b\theta_{a_i}-\b\theta_{b_j}) \\
- = & \sum_{i=1}^{10}\sum_{a_i}w_{a_i} \left[ \sum_{j=1}^{10} \sum_{b_j\in P_{a_i}} w_{b_j} \Delta(\b\theta_{a_i}-\b\theta_{b_j})\epsilonsij + \sum_{j=1}^{10}\sum_{b_j\not\in P_{a_i}} w_{b_j} \Delta(\b\theta_{a_i}-\b\theta_{b_j})\epsilonsij \right]
-\end{align*}
-We take the ensemble average of that equation in the sense that we assume that the product of the ellipticities of the galaxies are equal to their respective shear correlation functions, namely $\xi_+^{ij}\equiv \epsilon_{a_i}\epsilon_{b_j}^*$ for all $a_i$ and $b_j$.
+where we assume ${\rm d}\theta \ll \theta$. We define $N$ as the number of pointings in the survey and $F_k^i$ as the set of galaxies in pointing $k$ and tomographic bin $i$. The numerator in Equation \eqref{eq:xip_from_observations} then transforms to: \begin{align}
+& \sum_{k,\ell=1}^N \sum_{a\in F_k^i}\sum_{b\in F_{\ell}^j} w_a^iw_b^j\epsilon_a^i\epsilon_b^{j*} \Delta(|\b\theta_a^i-\b\theta_b^i|) \nonumber\\
+ = & \sum_{k=1}^N\sum_{a\in F_k^i}w_a^i \sum_{\ell=1}^N \sum_{b\in F_{\ell}^j} w_b^j \Delta(|\b\theta_a^i-\b\theta_b^i|)\, \epsilon_a^i\epsilon_b^{j*} \nonumber\\
+  = & \sum_{k=1}^N\sum_{a\in F_k^i}w_a^i \left[\sum_{b\in F_{k}^j} w_b^j \Delta(|\b\theta_a^i-\b\theta_b^i|)\, \epsilon_a^i\epsilon_b^{j*} + \sum_{\ell\neq k} \sum_{b\in F_{\ell}^j} w_b^j \Delta(|\b\theta_a^i-\b\theta_b^i|)\, \epsilon_a^i\epsilon_b^{j*}\right] \, .
+\end{align}
+When we denote the probability that pointing $k$ is of percentile $m$ by $P_m^k$ and assume that the product $\epsilon_a^i\epsilon_b^{j*}$ always equals its expectation value, we can set the numerator as \[
+\sum_{k=1}^N\sum_{a\in F_k^i}w_a^i \sum_m P_m^k \left[\overbrace{\sum_{b\in F_{k}^j} w_b^j \Delta(|\b\theta_a^i-\b\theta_b^i|)}^{\rm{(\ref{eq:numerator1}.a)}}\,  \xi_{+,mm}^{ij}(\theta) + \overbrace{\sum_{\ell\neq k} \sum_{b\in F_{\ell}^j} w_b^j \Delta(|\b\theta_a^i-\b\theta_b^i|)}^{\rm{(\ref{eq:numerator1}.b)}} \sum_n P_n^{\ell} \xi_{+,mn}^{ij}(\theta)\right] \, .
+\label{eq:numerator1}
+\]
+The term (\ref{eq:numerator1}.a) denotes all galaxies that lie within distance interval $[\theta,\theta+{\rm d}\theta]$ of galaxy $a$, and are in the same pointing as galaxy $a$. This term is equal to the (weighted) number density of galaxies in the pointing multiplied by $2\pi\theta\, {\rm d}\theta\, E(\theta)$. 
 
-Let $b_j\in P_{a_i}$ denote all $b_j$ that lie in the same pointing as the $a_i$. We observe that the left term is zero for $i\neq j$, as only galaxies of the same percentile can lie in the same pointing. The term $\sum_{b_i\in P_{a_i}}\deltafuncij$ now is the number of galaxies that lie within distance interval $[\theta,\theta+{\rm d}\theta]$ of galaxy $a_i$, which is equal to the number of galaxies in the whole pointing multiplied by $2\pi\theta\, {\rm d}\theta\, E(\theta)$. The prefactor $w_{b_i}$ transforms the number of galaxies to the \emph{weighted number density} of galaxy sample $b$ in percentile $i$, or $N_i(b)$, so the numerator now reads:
-\begin{align*}
-\sum_{i=1}^{10}\sum_{a_i}w_{a_i} \left[ 2\pi\theta\, {\rm d}\theta\, E(\theta) N_i(b)\xi_+^{ii} + \sum_{j=1}^{10}\sum_{b_j\not\in P_{a_i}} w_{b_j} \Delta(\b\theta_{a_i}-\b\theta_{b_j})\xi_+^{ij} \right]
-\end{align*}
-
- A similar argument can be made for the right term: Assuming for a second that all pointings outside of the one where galaxy $a_i$ is in are of percentile $j^*$, the right hand side would read \[
-\sum_{b_{j^*}\not\in P_{a_i}} w_{b_{j^*}} \Delta(\b\theta_{a_i}-\b\theta_{b_{j^*}})\xi_+^{i{j^*}} = 2\pi\theta\, {\rm d}\theta\, [1-E(\theta)]N_{j^*}(b)\xi_+^{i{j^*}}\, .
- \]  
- Taking the ensemble average of all realisations of depth-distributions, we can just denote the probability that a pointing neighbouring one of percentile $i$ is of percentile $j$ as $P(j | i,\theta)$. The numerator then reads \[
- \sum_{i=1}^{10}\sum_{a_i}w_{a_i} \left[ 2\pi\theta\, {\rm d}\theta\, E(\theta) N_i(b)\xi_+^{ii} + \sum_{j=1}^{10} P(j|i,\theta)\, 2\pi\theta\, {\rm d}\theta\, [1-E(\theta)]N_{j}(b)\xi_+^{i{j}} \right]\, .
- \]
- In our case we assume an infinite number of randomly distributed fields, so $P(j | i,\theta)=1/10$ holds. However, for a finite survey the footprint of depth-distributions seems to be of importance, as due to a limited number of fields the $P(j | i,\theta)$ does not equate its expectation value. For smaller surveys (or surveys with correlated depth-distributions) it seems appropriate to adjust this parameter. \todo{Wait for catherines 450deg${}^2$ simulations, maybe they are big enough?}
+The term (\ref{eq:numerator1}.b) denotes all galaxies within distance interval $[\theta,\theta+{\rm d}\theta]$ of galaxy $a$, that are \textit{not} in the same pointing as galaxy $a$. This is equal to the number density of galaxies in the respective pointings multiplied by $2\pi\theta\, {\rm d}\theta\, [1-E(\theta)]$. 
  
- If we define $A$ as the (arbitrarily big) survey area, we can set \[
- \sum_{a_i} w_{a_i} = A\, N_i(a)
+If we assume that said number density in a pointing is equal to the number density in the percentile it belongs to, $N_n^j$, and set $P_n^\ell=1/10$, the numerator becomes \begin{align}
+\sum_{k=1}^N \sum_{a\in F_k^i} w_a^i \sum_m P^k_m \left[2\pi\theta\,\d\theta\,E(\theta) N_m^j \xi_{+,mm}^{ij}(\theta) + 2\pi\theta\,\d\theta\,\frac{1-E(\theta)}{10}\, \sum_n N_n^j \xi_{+,mn}^{ij}(\theta) \right] \, .
+\end{align}
+Now the term $\sum_{a\in F_k^i} w_a^i$ denotes the (weighted) number of galaxies in pointing $k$, which we set as the number density of galaxies in the respective percentile multiplied with the area $A$ of the pointing. Applying this and setting $P_m^k=1/10$, the numerator reads 
+\begin{align}
+\frac{2\pi\theta\,\d\theta}{10} \sum_{k=1}^N \sum_m N_m^i A &\left[ E(\theta) N_m^j \xi_{+,mm}^{ij}(\theta) + \frac{1-E(\theta)}{10}\sum_n N_n^j\xi_{+,mn}^{ij}(\theta)\right] \nonumber\\
+ =  \, \frac{2\pi\theta\,\d\theta \, NA}{10}  \sum_m N_m^i &\left[ E(\theta) N_m^j \xi_{+,mm}^{ij}(\theta) + \frac{1-E(\theta)}{10}\sum_n N_n^j\xi_{+,mn}^{ij}(\theta)\right] \, .
+\end{align}
+%
+ The same line of argumentation can be applied to the denominator, which then reads: \[
+\frac{2\pi\theta\,\d\theta \, NA}{10}  \sum_m N_m^i \left[ E(\theta) N_m^j + \frac{1-E(\theta)}{10}\sum_n N_n^j\right]\, .
  \]
- and see that the numerator becomes \[
- 2\pi\theta\, {\rm d}\theta\, A \sum_{i=1}^{10}N_i(a) \left[E(\theta) N_i(b)\xi_+^{ii} + \sum_{j=1}^{10} P(j|i,\theta) [1-E(\theta)]N_{j}(b)\xi_+^{i{j}} \right]\, .
- \]
- The exact line of argumentation can be applied to the denominator, which then reads: \[
-  2\pi\theta\, {\rm d}\theta\, A \sum_{i=1}^{10}N_i(a) \left[E(\theta) N_i(b) + \sum_{j=1}^{10} P(j|i,\theta) [1-E(\theta)]N_{j}(b) \right]\, .
- \]
-Taking the ratio of the two quantities, and setting $P(j | i,\theta)=1/10$, we receive Equation \eqref{eq:correctionfunction1}.
-\section{Additional Figures}
-\subsection{Results of the MCMC}
-\begin{figure}[h]
+Taking the ratio of the two quantities, we see that Equations \eqref{eq:xip_from_observations} and \eqref{eq:correctionfunction1} are the same\footnote{Note that while here $N_m^i$ denotes a number density, in Equations \eqref{eq:xip_from_observations} and \eqref{eq:correctionfunction1} it denotes the total (weighted) number of galaxies. However, the difference is just a multiplication with the area $A$ of the pointings, which appears both in the numerator and the denominator and is thus cancelled out.}.
+\section{Outlook: Finite field effects}
+\label{sec:expand_eoftheta}
+\begin{figure}
+    \centering
+    \def\svgwidth{200pt}    
+%    \hspace*{1cm}
+    \input{images/expand_eoftheta.pdf_tex}  
+%    \hspace*{-2cm}
+    \caption[Graphic how to obtain $E_{ab}(\theta)$]{Graphic representation of the definitions of $E_{ab}(\theta)$. When the first galaxy is in the bottom left pointing, the probability to find the second galaxy in a pointing of distance $(a,b)$ is $E_{mn}(\theta)$.}
+    \label{fig:expand_etheta}
+\end{figure}
+In this chapter we will outline how to calculate the correction of the correlation functions for a finite survey with a potentially correlated distribution of depth between pointings. Essentially, this boils down to the calculation of $P_{mn}^{ij}(\theta)$ from Equation \eqref{eq:def_xiobs}. We calculate this weighting by the geometrical probability that a pair of galaxies of separation $\theta$ is of percentiles $m$ and $n$, $P(m,n|\theta)$, weighted by the respective number of galaxies in the percentiles $N_m^i,N_n^j$: \[
+P_{mn}^{ij}(\theta) = N_m^iN_n^jP(m,n|\theta)\, .
+\label{eq:pmnij1}
+\]
+ At first we define Functions $E_{ab}(\b\theta)$ as the probabilty that a galaxy pair of separation $\b\theta$ is in pointings of distance $(a,b)$. This situation is depicted in Figure \ref{fig:expand_etheta}. Due to symmetry, for the azimuthal average of the functions, $E_{ab}(\theta) = E_{-ab}(\theta) = E_{ba}(\theta)$ holds for all combinations of $a$ and $b$. Note that $E_{00}(\theta)=E(\theta)$ and $\sum_{a,b}E_{ab}(\theta)\equiv 1$.
+
+Let $P^*(m,n|a,b)$ denote the probability that two pointings of distance $(a,b)$ are of percentile $m$ and $n$ (which is directly calculable from a given survey footprint). 
+Then the following equation holds: \[
+P(m,n|\theta) = \sum_{a,b} E_{ab}(\theta)P^*(m,n|a,b)\, .
+\label{eq:pmntheta}
+\]
+Note that the expectation value of $P^*(m,n|a,b)$ for uncorrelated distributions is \[
+\la P^*(m,n|a,b)\ra = \begin{cases}
+0.1\,\delta_{mn},\qquad & \text{for }(a,b)=(0,0) \\
+0.01, & \text{else}
+\end{cases}\, ,
+\label{eq:pmnabstar}
+\]
+where $\delta_{mn}$ denotes the Kronecker delta. Keeping in mind that \[
+\sum_{(a,b)\neq (0,0)} E_{ab}(\theta) = 1-E(\theta)\, ,
+\]
+we can use the expectation value \eqref{eq:pmnabstar} to calculate \eqref{eq:pmntheta} as a consistency check. In that case, we receive the same value for the coefficients in \eqref{eq:pmnij1} as we have in Equation \eqref{eq:pmnij_uncorr} in Chapter \ref{sec:xipm_semianalytic} for the case of an infinite footprint and uncorrelated distribution of depth.
+
+\begin{figure}
 \centering
-	\includegraphics[width=0.7\textwidth]{images/obscorr.pdf}
-	\caption{Bias in the parameters for a KiDS-like Survey.}
-	\label{fig:mcmc_kids}
-\end{figure}  
-\begin{figure}[h]
+\begin{subfigure}[c]{0.49\textwidth}
+\def\svgwidth{100pt}
+\hspace*{2cm}
+\input{images/e_1.pdf_tex}
+\subcaption{For $\theta\sin(\phi)<L$ the volume of the dashed rectangle is $V(\theta,\phi)=\theta\sin(\phi)[L-\theta\cos(\phi)]$.}
+\label{fig:e01thetaa}
+\end{subfigure}
+\begin{subfigure}[c]{0.49\textwidth}
+\def\svgwidth{100pt}
+\hspace*{2cm}
+\input{images/e_2.pdf_tex}
+\subcaption{For $\theta\sin(\phi)>L$ the volume of the dashed rectangle is $V(\theta,\phi)=[2L-\theta\sin(\phi)]\, [L-\theta\cos(\phi)]$.}
+\label{fig:e01thetab}
+\end{subfigure}
+\caption[How to calculate $E_{01}(\theta)$]{How to calculate $E_{01}(\theta)$ for different values of $\theta$.}
+\label{fig:e01theta}
+\end{figure}
+
+The $E_{ab}$ can all be calculated analytically, similar to our method in Chapter \ref{sec:model_e}. We again assume a selection of square fields with side length $L$, and later set $L=60\arcmin$ to adapt to the KV450 survey. As an example, for $E_{01}$ we have several possible situations, depicted in Figure \ref{fig:e01theta}. For a separation vector $\b\theta$ with modulus $\theta<L$ and inclination angle $\phi$, the dashed rectangle in Figure \ref{fig:e01theta}\subref{fig:e01thetaa} depicts the galaxies that have a partner in the upper pointing. For $L<\theta<\sqrt{2}L$, the dashed rectangle in Figure \ref{fig:e01theta}\subref{fig:e01thetaa} represents the area of galaxies with a partner in the upper square under the condition that $\theta\sin(\phi)<L$. For $\theta\sin(\phi)>L$, the situation is depicted by Figure \ref{fig:e01theta}\subref{fig:e01thetab}. As soon as $\theta>\sqrt{2}L$ holds, the situation of Figure \ref{fig:e01theta}\subref{fig:e01thetaa} is impossible. When $\theta<2L$ holds, the vector is only constrained by $\theta\cos(\phi)<L$, but as soon as $\theta >2L$ holds, we additionally need to impose $\theta\sin(\phi)<2L$. Again setting $E_{ab}(\b\theta) = V(\theta,\phi)/L^2$, we define \begin{align}
+E_{01}^{(a)}(\b\theta) & \equiv \frac{\theta}{L}\sin(\phi)[1-\frac{\theta}{L}\cos(\phi)] \nonumber\\
+E_{01}^{(b)}(\b\theta) & \equiv [2-\frac{\theta}{L}\sin(\phi)]\, [1-\frac{\theta}{L}\cos(\phi)]
+\end{align}
+Taking the azimuthal average, we compute:
+{
+\begingroup
+\addtolength{\jot}{1em}
+\begin{align}
+E_{01}(\theta) = & \begin{cases}
+\frac{1}{\pi}\int_0^{\frac{\pi}{2}} \d\phi\, E_{01}^{(a)}(\b\theta) & \frac{\theta}{L} < 1 \\[10pt]
+ \frac{1}{\pi}  \left[\int_{\cos\inv(L/\theta)}^{\sin\inv(L/\theta)}\d\phi\,E_{01}^{(a)}(\b\theta) + \int_{\sin\inv(L/\theta)}^{\frac{\pi}{2}}\d\phi\, E_{01}^{(b)}(\b\theta) \right]  & 1 < \frac{\theta}{L} < \sqrt{2} \\[10pt]
+ \frac{1}{\pi} \int_{\cos\inv(L/\theta)}^{\frac{\pi}{2}}\d\phi\, E_{01}^{(b)}(\b\theta) & \sqrt{2}<\frac{\theta}{L}<2 \\[10pt]
+\frac{1}{\pi} \int_{\cos\inv(L/\theta)}^{\sin\inv(2L/\theta)}\d\phi\, E_{01}^{(b)}(\b\theta) & 2<\frac{\theta}{L}<\sqrt{5} \\[10pt]
+ 0 & \sqrt{5}<\frac{\theta}{L}
+\end{cases}\nonumber\\
+ = & \begin{cases}
+ \frac{(2L-\theta)\theta}{2\pi L^2} & \frac{\theta}{L} < 1 \\[10pt]
+ \frac{1}{\pi}\left[\frac{3}{2}- 2\frac{\theta}{L}+\frac{\theta^2}{L^2}+2\sqrt{\frac{\theta^2}{L^2}-1}+2\rm{sec\inv}\left(\frac{\theta}{L}\right)\right] & 1<\frac{\theta}{L}<\sqrt{2} \\[10pt]
+ \frac{1}{2\pi}\left[-1-4\frac{\theta}{L}+4\sqrt{\frac{\theta^2}{L^2}-1}+4\rm{csc\inv}\left(\frac{\theta}{L}\right)\right] & \sqrt{2} < \frac{\theta}{L} < 2 \\[10pt]
+ \frac{1}{2\pi}\left[-5-\frac{\theta^2}{L^2}+2\sqrt{\frac{\theta^2}{L^2}-4}+4\sqrt{\frac{\theta^2}{L^2}-1}-4\rm{sec\inv}\left(\frac{\theta}{L}\right)+4\sin\inv\left(\frac{2L}{\theta}\right)\right] & 2 < \frac{\theta}{L} < \sqrt{5} \\[10pt]
+ 0 & \sqrt{5}<\frac{\theta}{L}
+ \end{cases}\, .
+\end{align}
+\endgroup
+}
+
+\begin{figure}
 \centering
-	\includegraphics[width=0.7\textwidth]{images/euclid.pdf}
-	\caption{Bias in the parameters for a Euclid-like Survey.}
-	\label{fig:mcmc_euclid}
-\end{figure}  
-\todo{Put both in one plot? Maybe put reference MC simulation where $\xi_\pm$ was not changed?}
+\def\svgwidth{120pt}
+\input{images/drawing.pdf_tex}
+\caption[Visualisation of the numerical computation for $E_{01}(\theta)$.]{Visualisation of the numerical computation for $E_{01}(\theta)$. For a circle of radius $\theta$, the length of the red arc divided by $2\pi$ represents the fraction of galaxies within the respective pointing. This value needs to be integrated for all possible centers of the circle in the pointing. That procedure is straightforward to expand for other $E_{ab}(\theta)$.}
+\label{fig:eoftheta_sim}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.8\textwidth]{images/eab.pdf}
+\caption{The functions $E_{ab}(\theta)$ for the first few possible combinations.}
+\label{fig:eab}
+\end{figure}
+Naturally, to calculate those functions for all possible combinations would be rather tedious, however they are simple to determine numerically (compare Figure \ref{fig:eoftheta_sim}). A plot of these functions can be found in Figure \ref{fig:eab}.
+
+When we now simulate random distributions of the depth-function for a $100\,\rm{deg}^2$-field, a $450\,\rm{deg}^2$-field and a $1000\,\rm{deg}^2$-field, we can compare how they differ from each other and estimate how important finite-field effects are. As can be seen from Figures \ref{fig:100degsqr}, \ref{fig:450degsqr} and \ref{fig:1000degsqr}, the effect is quite significant for a $100\,\rm{deg}^2$-field, but almost negligible for a $1000\,\rm{deg}^2$-field. This leads to the assumption that both for the KiDS- as for the Euclid-survey, finite field effects do not need to be accounted for. However, if the distribution of depth is correlated in the surveys, that might have a noticeable impact on the results.
